[Präsentation] Anpassen des Themes

--- a/Praesentation/praesentation.tex
+++ b/Praesentation/praesentation.tex
@@ -7,6 +7,15 @@
 \usepackage[autostyle=true,german=quotes]{csquotes}			% Wird für den Befehl \enquote benötigt
 \usepackage{tikz}											% Ermöglicht das Zeichnen von Grafiken
 \usepackage{amssymb}										% Einfügen von zusätzlichen Symbolen wie \square
+\usepackage{fontspec}
+
+\setsansfont{Calibri}
+\setmonofont{Courier New}
+
+\metroset{titleformat=smallcaps,		% Überschriften werden in smallcaps geschrieben
+	sectionpage=simple,					% Entfernen der Progressbar auf den Sectionpages
+	block=fill,							% Hinterlegen von Umgebungen wie Theorem oder Example
+}							
 
 % Treffen von Einstellungen für tikz
 \usetikzlibrary{positioning}
@@ -15,14 +24,13 @@
 \tikzset{bezier/.style={inner sep=0pt,minimum size=0cm},}
 
 \title{On the Power of Color Refinement}
-\subtitle{V. Arvind, Johannes Köbler, Gaurav Rattan und Oleg Verbitsky}
+\subtitle{V. Arvind, Johannes Köbler, Gaurav Rattan und\\ Oleg Verbitsky}
 \date{05.02.2018}
 \author{Florian Lüdiger}
 \institute{Seminar Algorithm Engineering - Lehrstuhl 11 - TU Dortmund}
 \begin{document}
-  \maketitle
-  \section{Worum soll es gehen?}
-  \begin{frame}{Graph-Isomorphie}
-    
-  \end{frame}
+	\maketitle
+	\section{Worum soll es gehen?}
+	\begin{frame}{Graph-Isomorphie}
+	\end{frame}
 \end{document}
