[Präsentation] Einfügen einer groben Inhaltsübersicht

--- a/Praesentation/praesentation.tex
+++ b/Praesentation/praesentation.tex
@@ -30,7 +30,41 @@
 \institute{Seminar Algorithm Engineering - Lehrstuhl 11 - TU Dortmund}
 \begin{document}
 	\maketitle
-	\section{Worum soll es gehen?}
-	\begin{frame}{Graph-Isomorphie}
+	
+	\section{Wiederholung: Graph-Isomorphie und Color-Refinement}
+	\begin{frame}
+		\begin{itemize}
+			\item Beispiel für GI
+			\item Beispiel für CR
+			\item Kernergebnis von CR
+			\item Problem: nicht-isomorphe Graphen können nicht immer unterschieden werden (Beispiel)
+		\end{itemize}
+	\end{frame}
+
+	\section{Was gibt es neues?}
+	\begin{frame}
+		\begin{itemize}
+			\item Definition CR-Graph
+		\end{itemize}
+	\end{frame}
+
+	\section{Lokale Struktur}
+
+	\section{Globale Struktur}
+	
+	\section{Ergebnis}
+	\begin{frame}
+		\begin{itemize}
+			\item Anwendung der vorgestellten Bedingungen
+			\item Anwendungsbeispiel
+		\end{itemize}
+	\end{frame}
+
+	\section{Backup-Folien}
+	\begin{frame}
+		\begin{itemize}
+			\item Beweis lokale Struktur
+			\item Ein Beweis für globale Struktur beispielhaft
+		\end{itemize}
 	\end{frame}
 \end{document}
