[Präsentation] Hinzufügen von Hervorhebungen

--- a/Praesentation/praesentation.tex
+++ b/Praesentation/praesentation.tex
@@ -52,7 +52,7 @@
 	\section{Wiederholung: Graph-Isomorphie und Color-Refinement}
 	\begin{frame}{Graph-Isomorphie}
 		\begin{Definition}
-			 Zwei Graphen $G$ und $H$ sind isomorph, wenn es eine bijektive Abbildung $\phi$ gibt, sodass gilt:\\ $(u,v)\in E_G\Leftrightarrow (\phi (u),\phi (v))\in E_H$ für alle $u,v\in V_G$.
+			 Zwei Graphen $G$ und $H$ sind \alert{\textbf{isomorph}}, wenn es eine bijektive Abbildung $\phi$ gibt, sodass gilt:\\ $(u,v)\in E_G\Leftrightarrow (\phi (u),\phi (v))\in E_H$ für alle $u,v\in V_G$.
 		\end{Definition}
 		% Vortragsnotizen:
 		% Adjazenz
@@ -126,7 +126,7 @@
 	\end{frame}
 	\begin{frame}{Color-Refinement}
 		\begin{Definition}
-			Mit der Color-Refinement-Heuristik kann in polynomieller Zeit festgestellt werden, dass zwei Graphen nicht isomorph sind.
+			Mit der Color-Refinement-Heuristik kann in polynomieller Zeit festgestellt werden, dass zwei Graphen \alert{\textbf{nicht isomorph}} sind.
 		\end{Definition}
 		Anders gesagt gilt für beliebige Graphen $G$,$H$:\\
 		\circlearound{1} CR unterscheidet $G$ und $H$ $\Rightarrow$ $G\not\simeq H$
@@ -310,7 +310,7 @@
 	\section{Was gibt es neues?}
 	\begin{frame}{Die Klasse der CR-Graphen}
 		\begin{Definition}
-			Graph $G$ ist \textbf{CR-Graph}, wenn das Color-Refinement diesen von jedem nicht zu $G$ isomorphen Graphen $H$ unterscheiden kann.
+			Graph $G$ ist \alert{\textbf{CR-Graph}}, wenn das Color-Refinement diesen von jedem nicht zu $G$ isomorphen Graphen $H$ unterscheiden kann.
 		\end{Definition}
 		Für beliebige CR-Graphen $G$,$H$ gilt also:\\
 		\circlearound{2} $G\not\simeq H$ $\Rightarrow$ CR unterscheidet $G$ und $H$
@@ -324,7 +324,7 @@
 		\end{Korollar}
 		\pause
 		\vspace{10mm}
-		\Large{\textit{Wie identifiziere ich also die Klasse der CR-Graphen?}}
+		\alert{\Large{\textit{Wie identifiziere ich also die Klasse der CR-Graphen?}}}
 	\end{frame}
 
 	\section{Begriffserklärungen und Anwendungsbeispiel}
@@ -377,15 +377,15 @@
 	\end{frame}
 	\begin{frame}{Stabile Partitionierung}
 		\begin{Definition}
-			Die \textbf{Partitionierung} $\mathcal{P}$ teilt den Graphen $G$ in die Farbklassen eines Verfeinerungsschritts ein.
+			Die \alert{\textbf{Partitionierung}} $\mathcal{P}$ teilt den Graphen $G$ in die Farbklassen eines Verfeinerungsschritts ein.
 		\end{Definition}
 		\pause
 		\begin{Definition}
-			Wenn sich die Partitionierung bei weiteren Verfeinerungsschritten nicht mehr ändert, wird diese \textbf{stabile Partitionierung} $\mathcal{P}^s$ genannt.
+			Wenn sich die Partitionierung bei weiteren Verfeinerungsschritten nicht mehr ändert, wird diese \alert{\textbf{stabile Partitionierung}} $\mathcal{P}^s$ genannt.
 		\end{Definition}
 		\pause
 		\begin{Definition}
-			Die einzelnen Partitionen innerhalb der Partitionierung werden \textbf{Zellen} genannt.
+			Die einzelnen Partitionen innerhalb der Partitionierung werden \alert{\textbf{Zellen}} genannt.
 		\end{Definition}
 	\end{frame}
 	\begin{frame}{Anwendung auf das Beispiel}
