[Präsentation] Hinzufügen von Beschriftungen

--- a/Praesentation/praesentation.tex
+++ b/Praesentation/praesentation.tex
@@ -419,6 +419,10 @@
 			\node[main node] (B1) [left = 0cm of B] {};
 			\node[main node] (G1) [fill=green!50,left = 0cm of G] {};
 			\node[main node] (R1) [fill=red!50,left = 0cm of R] {};
+
+			\node (text1) [above right = 0cm and 4cm of 7] {\enquote{Partitionierung}};
+			\node (text2) [below = 0.1cm of text1] {\enquote{stabile Partitionierung}};
+			\node (text3) [below = 0.1cm of text2] {\enquote{Zellen}};
 		\end{tikzpicture}
 	\end{frame}
 	
