--- a/Praesentation/praesentation.tex
+++ b/Praesentation/praesentation.tex
@@ -675,6 +675,374 @@
 	\end{frame}
 
 	\section{Globale Struktur}
+	\begin{frame}{Zellgraph}
+		\begin{Definition}
+			Der Zellgraph $C(G)$ eines Graphen $G$ wird aus dessen stabilen Partition $\mathcal{P}_G$ gebildet.
+			Es handelt sich dabei um einen vollständigen Graphen, bei dem die Knoten die Zellen von $\mathcal{P}_G$ darstellen.
+		\end{Definition}
+	\end{frame}
+	\begin{frame}{Zellgraph - Beispiel}
+		\centering
+		\begin{tikzpicture}
+		\def\scale{0.6}
+		\begin{scope}
+			\node[main node] (1) [fill=green!50]{A};
+			\node[main node] (2) [fill=red!50,below left = \scale*0.57cm and \scale*1cm of 1]  {B};
+			\node[main node] (6) [fill=red!50,below right = \scale*0.57cm and \scale*1cm of 1] {F};
+			\node[main node] (3) [fill=red!50,below = \scale*1cm of 2] {C};
+			\node[main node] (5) [fill=red!50,below = \scale*1cm of 6] {E};
+			\node[main node] (4) [fill=green!50,below right = \scale*0.57cm and \scale*1cm of 3] {D};
+			\node[main node] (7) [above = \scale*1cm of 1] {G};
+			\node[main node] (8) [below = \scale*1cm of 4] {H};
+			
+			\path[draw,thick]
+			(1) edge node {} (2)
+			(2) edge node {} (3)
+			(3) edge node {} (4)
+			(4) edge node {} (5)
+			(5) edge node {} (6)
+			(6) edge node {} (1)
+			(1) edge node {} (7)
+			(4) edge node {} (8);
+		\end{scope}
+		
+		\begin{scope}[yshift=-0.8cm,xshift=5cm]
+			\node[main node] (1) [fill=blue!50] {};
+			\node[main node] (2) [fill=green!50,below left = 0.5cm and 0.85cm of 1] {};
+			\node[main node] (3) [fill=red!50,below = 1cm of 1] {};
+			
+			\path[draw,thick] (1) edge node {} (2);
+			\path[draw,thick] (2) edge node {} (3);
+			\path[draw,thick] (1) edge node {} (3);
+		\end{scope}
+%		\begin{scope}[xshift=6cm]
+%			\node[main node] (1) [fill=white] {1};
+%			\node[main node] (2) [fill=white,dashed,below = 0.15cm of 1] {2};
+%			
+%			\node (t1) [right = 0.2cm of 1] {homogene Zelle};
+%			\node (t2) [right = 0.2cm of 2] {heterogene Zelle};
+%			
+%			\node[bezier] (31) [below left = 0.55cm and 0.15cm of 2] {};
+%			\node[bezier] (32) [right = 0.85cm of 31] {};
+%			\path[draw,thick] (31) edge node {} (32);
+%			
+%			\node[bezier] (41) [below = 0.75cm of 31] {};
+%			\node[bezier] (42) [right = 0.85cm of 41] {};
+%			\path[draw,thick,dashed] (41) edge node {} (42);
+%			
+%			\node (t3) [right = 0.12cm of 32] {isotrope Kante};
+%			\node (t4) [right = 0.12cm of 42] {anisotrope Kante};
+%			
+%			\node[main node] (5) [fill = white, below = 1.6cm of 2] {$x$};
+%			\node (t5) [right = 0.2cm of 5] {Kardinalität $x$};
+%		\end{scope}
+		\end{tikzpicture}
+	\end{frame}
+	\begin{frame}{Eigenschaften von Zellgraphen}
+		\begin{Definition}
+			Eine Zelle $X\in C(G)$ wird \alert{\textbf{homogen}} genannt, wenn der Graph $G[X]$ vollständig oder leer ist.
+			Anderenfalls wird diese \alert{\textbf{heterogen}} genannt.
+		\end{Definition}
+		\pause
+		\begin{Definition}
+			Eine Kante $\{X,Y\}$ mit $X,Y\in C(G)$ wird \alert{\textbf{isotrop}} genannt, wenn der bipartite Graph $G[X,Y]$ vollständig oder leer ist.
+			Anderenfalls wird diese \alert{\textbf{anisotrop}} genannt.
+		\end{Definition}
+		\pause
+		\begin{Definition}
+			Ein Pfad $X_1X_2...X_l$ in $C(G)$, bei der jede Kante anisotrop ist, wird \alert{\textbf{anisotroper Pfad}} genannt.
+			Wenn dieser Pfad einen Kreis schließt wird er als \alert{\textbf{anisotroper Zyklus}} bezeichnet.
+			Gilt für einen anisotropen Pfad $|X_1|=|X_2|=...=|X_l|$, dann wird er \alert{\textbf{gleichmäßig}} genannt.
+		\end{Definition}
+	\end{frame}
+	\begin{frame}{Eigenschaften von Zellgraphen - Beispiel}
+		\centering
+		\begin{tikzpicture}
+			\def\scale{0.6}
+			\begin{scope}
+				\node[main node] (1) [fill=green!50]{A};
+				\node[main node] (2) [fill=red!50,below left = \scale*0.57cm and \scale*1cm of 1]  {B};
+				\node[main node] (6) [fill=red!50,below right = \scale*0.57cm and \scale*1cm of 1] {F};
+				\node[main node] (3) [fill=red!50,below = \scale*1cm of 2] {C};
+				\node[main node] (5) [fill=red!50,below = \scale*1cm of 6] {E};
+				\node[main node] (4) [fill=green!50,below right = \scale*0.57cm and \scale*1cm of 3] {D};
+				\node[main node] (7) [above = \scale*1cm of 1] {G};
+				\node[main node] (8) [below = \scale*1cm of 4] {H};
+				
+				\path[draw,thick]
+				(1) edge node {} (2)
+				(2) edge node {} (3)
+				(3) edge node {} (4)
+				(4) edge node {} (5)
+				(5) edge node {} (6)
+				(6) edge node {} (1)
+				(1) edge node {} (7)
+				(4) edge node {} (8);
+			\end{scope}
+			
+			\begin{scope}[yshift=-0.8cm,xshift=4cm]
+				\node[main node] (1) [fill=blue!50] {$2$};
+				\node[main node] (2) [fill=green!50,below left = 0.5cm and 0.85cm of 1] {$2$};
+				\node[main node] (3) [dashed,fill=red!50,below = 1cm of 1] {$4$};
+				
+				\path[draw,thick,dashed] (1) edge node {} (2);
+				\path[draw,thick,dashed] (2) edge node {} (3);
+				\path[draw,thick] (1) edge node {} (3);
+			\end{scope}
+			\begin{scope}[xshift=6cm]
+				\node[main node] (1) [fill=white] {};
+				\node[main node] (2) [fill=white,dashed,below = 0.15cm of 1] {};
+				
+				\node (t1) [right = 0.2cm of 1] {homogene Zelle};
+				\node (t2) [right = 0.2cm of 2] {heterogene Zelle};
+				
+				\node[bezier] (31) [below left = 0.55cm and 0.15cm of 2] {};
+				\node[bezier] (32) [right = 0.85cm of 31] {};
+				\path[draw,thick] (31) edge node {} (32);
+				
+				\node[bezier] (41) [below = 0.75cm of 31] {};
+				\node[bezier] (42) [right = 0.85cm of 41] {};
+				\path[draw,thick,dashed] (41) edge node {} (42);
+				
+				\node (t3) [right = 0.12cm of 32] {isotrope Kante};
+				\node (t4) [right = 0.12cm of 42] {anisotrope Kante};
+				
+				\node[main node] (5) [fill = white, below = 1.6cm of 2] {$x$};
+				\node (t5) [right = 0.2cm of 5] {Kardinalität $x$};
+			\end{scope}
+		\end{tikzpicture}
+	\end{frame}
+	\begin{frame}{Allgemeine Globale Eigenschaften von CR-Graphen}
+		\begin{Lemma}
+			Der Zellgraph $C(G)$ eines CR-Graphen $G$ erfüllt folgende Eigenschaften:
+			
+			\begin{enumerate}[label=(\Alph*)]
+				\setcounter{enumi}{2}
+				\item $C(G)$ enthält keinen gleichmäßigen, anisotropen Pfad, der zwei heterogene Zellen verbindet.
+%				\item $C(G)$ enthält keinen gleichmäßigen, anisotropen Zyklus.
+%				\item $C(G)$ enthält weder einen anisotropen Pfad $XY_1Y_2...Y_lZ$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|>|Z|$, noch einen anisotropen Zyklus $XY_1Y_2...Y_l$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|$ und die Zelle $Y_l$ heterogen ist.
+%				\item $C(G)$ enthält keinen anisotropen Pfad $XY_1Y_2...Y_l$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|$ und die Zelle $Y_l$ heterogen ist.
+			\end{enumerate}
+		\end{Lemma}
+	\end{frame}
+	\begin{frame}{Allgemeine Globale Eigenschaften von CR-Graphen}
+		\centering
+		\textit{$C(G)$ enthält keinen gleichmäßigen, anisotropen Pfad, der zwei heterogene Zellen verbindet.}
+		
+		\begin{tikzpicture}
+			\begin{scope}
+				\node[main node] (1) [fill=blue!50] {$2$};
+				\node[main node] (2) [fill=green!50,below left = 0.5cm and 0.85cm of 1] {$2$};
+				\node[main node] (3) [dashed,fill=red!50,below = 1cm of 1] {$4$};
+				
+				\path[draw,thick,dashed] (1) edge node {} (2);
+				\path[draw,thick,dashed] (2) edge node {} (3);
+				\path[draw,thick] (1) edge node {} (3);
+			\end{scope}
+			\begin{scope}[xshift=2cm]
+				\node[main node] (1) [fill=white] {};
+				\node[main node] (2) [fill=white,dashed,below = 0.15cm of 1] {};
+				
+				\node (t1) [right = 0.2cm of 1] {homogene Zelle};
+				\node (t2) [right = 0.2cm of 2] {heterogene Zelle};
+				
+				\node[bezier] (31) [below left = 0.55cm and 0.15cm of 2] {};
+				\node[bezier] (32) [right = 0.85cm of 31] {};
+				\path[draw,thick] (31) edge node {} (32);
+				
+				\node[bezier] (41) [below = 0.75cm of 31] {};
+				\node[bezier] (42) [right = 0.85cm of 41] {};
+				\path[draw,thick,dashed] (41) edge node {} (42);
+				
+				\node (t3) [right = 0.12cm of 32] {isotrope Kante};
+				\node (t4) [right = 0.12cm of 42] {anisotrope Kante};
+				
+				\node[main node] (5) [fill = white, below = 1.6cm of 2] {$x$};
+				\node (t5) [right = 0.2cm of 5] {Kardinalität $x$};
+			\end{scope}
+		\end{tikzpicture}
+	\end{frame}
+	\begin{frame}{Allgemeine Globale Eigenschaften von CR-Graphen}
+		\begin{Lemma}
+			Der Zellgraph $C(G)$ eines CR-Graphen $G$ erfüllt folgende Eigenschaften:
+			
+			\begin{enumerate}[label=(\Alph*)]
+				\setcounter{enumi}{2}
+				\item $C(G)$ enthält keinen gleichmäßigen, anisotropen Pfad, der zwei heterogene Zellen verbindet.
+				\item $C(G)$ enthält keinen gleichmäßigen, anisotropen Zyklus.
+%				\item $C(G)$ enthält weder einen anisotropen Pfad $XY_1Y_2...Y_lZ$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|>|Z|$, noch einen anisotropen Zyklus $XY_1Y_2...Y_l$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|$ und die Zelle $Y_l$ heterogen ist.
+%				\item $C(G)$ enthält keinen anisotropen Pfad $XY_1Y_2...Y_l$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|$ und die Zelle $Y_l$ heterogen ist.
+			\end{enumerate}
+		\end{Lemma}
+	\end{frame}
+	\begin{frame}{Allgemeine Globale Eigenschaften von CR-Graphen}
+		\centering
+		\textit{$C(G)$ enthält keinen gleichmäßigen, anisotropen Zyklus.}
+		
+		\begin{tikzpicture}
+			\begin{scope}
+				\node[main node] (1) [fill=blue!50] {$2$};
+				\node[main node] (2) [fill=green!50,below left = 0.5cm and 0.85cm of 1] {$2$};
+				\node[main node] (3) [dashed,fill=red!50,below = 1cm of 1] {$4$};
+				
+				\path[draw,thick,dashed] (1) edge node {} (2);
+				\path[draw,thick,dashed] (2) edge node {} (3);
+				\path[draw,thick] (1) edge node {} (3);
+			\end{scope}
+			\begin{scope}[xshift=2cm]
+				\node[main node] (1) [fill=white] {};
+				\node[main node] (2) [fill=white,dashed,below = 0.15cm of 1] {};
+				
+				\node (t1) [right = 0.2cm of 1] {homogene Zelle};
+				\node (t2) [right = 0.2cm of 2] {heterogene Zelle};
+				
+				\node[bezier] (31) [below left = 0.55cm and 0.15cm of 2] {};
+				\node[bezier] (32) [right = 0.85cm of 31] {};
+				\path[draw,thick] (31) edge node {} (32);
+				
+				\node[bezier] (41) [below = 0.75cm of 31] {};
+				\node[bezier] (42) [right = 0.85cm of 41] {};
+				\path[draw,thick,dashed] (41) edge node {} (42);
+				
+				\node (t3) [right = 0.12cm of 32] {isotrope Kante};
+				\node (t4) [right = 0.12cm of 42] {anisotrope Kante};
+				
+				\node[main node] (5) [fill = white, below = 1.6cm of 2] {$x$};
+				\node (t5) [right = 0.2cm of 5] {Kardinalität $x$};
+			\end{scope}
+		\end{tikzpicture}
+	\end{frame}
+	\begin{frame}{Allgemeine Globale Eigenschaften von CR-Graphen}
+		\begin{Lemma}
+			Der Zellgraph $C(G)$ eines CR-Graphen $G$ erfüllt folgende Eigenschaften:
+			
+			\begin{enumerate}[label=(\Alph*)]
+				\setcounter{enumi}{2}
+				\item $C(G)$ enthält keinen gleichmäßigen, anisotropen Pfad, der zwei heterogene Zellen verbindet.
+				\item $C(G)$ enthält keinen gleichmäßigen, anisotropen Zyklus.
+				\item $C(G)$ enthält weder einen anisotropen Pfad $XY_1Y_2...Y_lZ$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|>|Z|$, noch einen anisotropen Zyklus $XY_1Y_2...Y_l$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|$ und die Zelle $Y_l$ heterogen ist.
+%				\item $C(G)$ enthält keinen anisotropen Pfad $XY_1Y_2...Y_l$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|$ und die Zelle $Y_l$ heterogen ist.
+			\end{enumerate}
+		\end{Lemma}
+	\end{frame}
+	\begin{frame}{Allgemeine Globale Eigenschaften von CR-Graphen}
+		\centering
+		\textit{$C(G)$ enthält weder einen anisotropen Pfad $XY_1Y_2...Y_lZ$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|>|Z|$, noch einen anisotropen Zyklus $XY_1Y_2...Y_l$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|$ und die Zelle $Y_l$ heterogen ist.}
+		
+		\begin{tikzpicture}
+			\begin{scope}
+				\node[main node] (1) [fill=blue!50] {$2$};
+				\node[main node] (2) [fill=green!50,below left = 0.5cm and 0.85cm of 1] {$2$};
+				\node[main node] (3) [dashed,fill=red!50,below = 1cm of 1] {$4$};
+				
+				\path[draw,thick,dashed] (1) edge node {} (2);
+				\path[draw,thick,dashed] (2) edge node {} (3);
+				\path[draw,thick] (1) edge node {} (3);
+			\end{scope}
+			\begin{scope}[xshift=2cm]
+				\node[main node] (1) [fill=white] {};
+				\node[main node] (2) [fill=white,dashed,below = 0.15cm of 1] {};
+				
+				\node (t1) [right = 0.2cm of 1] {homogene Zelle};
+				\node (t2) [right = 0.2cm of 2] {heterogene Zelle};
+				
+				\node[bezier] (31) [below left = 0.55cm and 0.15cm of 2] {};
+				\node[bezier] (32) [right = 0.85cm of 31] {};
+				\path[draw,thick] (31) edge node {} (32);
+				
+				\node[bezier] (41) [below = 0.75cm of 31] {};
+				\node[bezier] (42) [right = 0.85cm of 41] {};
+				\path[draw,thick,dashed] (41) edge node {} (42);
+				
+				\node (t3) [right = 0.12cm of 32] {isotrope Kante};
+				\node (t4) [right = 0.12cm of 42] {anisotrope Kante};
+				
+				\node[main node] (5) [fill = white, below = 1.6cm of 2] {$x$};
+				\node (t5) [right = 0.2cm of 5] {Kardinalität $x$};
+			\end{scope}
+		\end{tikzpicture}
+	\end{frame}
+	\begin{frame}{Allgemeine Globale Eigenschaften von CR-Graphen}
+		\begin{Lemma}
+			Der Zellgraph $C(G)$ eines CR-Graphen $G$ erfüllt folgende Eigenschaften:
+			
+			\begin{enumerate}[label=(\Alph*)]
+				\setcounter{enumi}{2}
+				\item $C(G)$ enthält keinen gleichmäßigen, anisotropen Pfad, der zwei heterogene Zellen verbindet.
+				\item $C(G)$ enthält keinen gleichmäßigen, anisotropen Zyklus.
+				\item $C(G)$ enthält weder einen anisotropen Pfad $XY_1Y_2...Y_lZ$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|>|Z|$, noch einen anisotropen Zyklus $XY_1Y_2...Y_l$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|$ und die Zelle $Y_l$ heterogen ist.
+				\item $C(G)$ enthält keinen anisotropen Pfad $XY_1Y_2...Y_l$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|$ und die Zelle $Y_l$ heterogen ist.
+			\end{enumerate}
+		\end{Lemma}
+	\end{frame}
+	\begin{frame}{Allgemeine Globale Eigenschaften von CR-Graphen}
+		\centering
+		\textit{$C(G)$ enthält keinen anisotropen Pfad $XY_1Y_2...Y_l$, sodass $|X|<|Y_1|=|Y_2|=...=|Y_l|$ und die Zelle $Y_l$ heterogen ist.}
+		
+		\begin{tikzpicture}
+			\only<1>{\begin{scope}
+				\node[main node] (1) [fill=blue!50] {$2$};
+				\node[main node] (2) [fill=green!50,below left = 0.5cm and 0.85cm of 1] {$2$};
+				\node[main node] (3) [dashed,fill=red!50,below = 1cm of 1] {$4$};
+				
+				\path[draw,thick,dashed] (1) edge node {} (2);
+				\path[draw,thick,dashed] (2) edge node {} (3);
+				\path[draw,thick] (1) edge node {} (3);
+			\end{scope}
+			\begin{scope}[xshift=2cm]
+				\node[main node] (1) [fill=white] {};
+				\node[main node] (2) [fill=white,dashed,below = 0.15cm of 1] {};
+				
+				\node (t1) [right = 0.2cm of 1] {homogene Zelle};
+				\node (t2) [right = 0.2cm of 2] {heterogene Zelle};
+				
+				\node[bezier] (31) [below left = 0.55cm and 0.15cm of 2] {};
+				\node[bezier] (32) [right = 0.85cm of 31] {};
+				\path[draw,thick] (31) edge node {} (32);
+				
+				\node[bezier] (41) [below = 0.75cm of 31] {};
+				\node[bezier] (42) [right = 0.85cm of 41] {};
+				\path[draw,thick,dashed] (41) edge node {} (42);
+				
+				\node (t3) [right = 0.12cm of 32] {isotrope Kante};
+				\node (t4) [right = 0.12cm of 42] {anisotrope Kante};
+				
+				\node[main node] (5) [fill = white, below = 1.6cm of 2] {$x$};
+				\node (t5) [right = 0.2cm of 5] {Kardinalität $x$};
+			\end{scope}}
+
+			\only<2>{\begin{scope}
+				\node[main node] (1) [fill=black!20] {$2$};
+				\node[main node] (2) [fill=green!50,below left = 0.5cm and 0.85cm of 1] {$2$};
+				\node[main node] (3) [dashed,fill=red!50,below = 1cm of 1] {$4$};
+				
+				\path[draw,thick,dashed,draw=black!30] (1) edge node {} (2);
+				\path[draw,thick,dashed] (2) edge node {} (3);
+				\path[draw,thick,draw=black!30] (1) edge node {} (3);
+			\end{scope}
+			\begin{scope}[xshift=2cm]
+				\node[main node] (1) [fill=white] {};
+				\node[main node] (2) [fill=white,dashed,below = 0.15cm of 1] {};
+				
+				\node (t1) [right = 0.2cm of 1] {homogene Zelle};
+				\node (t2) [right = 0.2cm of 2] {heterogene Zelle};
+				
+				\node[bezier] (31) [below left = 0.55cm and 0.15cm of 2] {};
+				\node[bezier] (32) [right = 0.85cm of 31] {};
+				\path[draw,thick] (31) edge node {} (32);
+				
+				\node[bezier] (41) [below = 0.75cm of 31] {};
+				\node[bezier] (42) [right = 0.85cm of 41] {};
+				\path[draw,thick,dashed] (41) edge node {} (42);
+				
+				\node (t3) [right = 0.12cm of 32] {isotrope Kante};
+				\node (t4) [right = 0.12cm of 42] {anisotrope Kante};
+				
+				\node[main node] (5) [fill = white, below = 1.6cm of 2] {$x$};
+				\node (t5) [right = 0.2cm of 5] {Kardinalität $x$};
+				\end{scope}}
+		\end{tikzpicture}
+	\end{frame}
 	
 	\section{Ergebnis}
 	\begin{frame}
